--- a/cat/templates/cat/allgroup.html
+++ b/cat/templates/cat/allgroup.html
@@ -12,9 +12,9 @@
   </tr>
   {% for t in all_group %}
   <tr>
-    <td>{{ t.code }}</td>   <!-- Имя    -->
-    <td>{{ t.title   }}</td>   <!-- порода  -->
-    <td>{{ t.scoro}}</td>   <!--Наличие        -->
+    <td>{{ t.code }}</td>   
+    <td>{{ t.title   }}</td>  
+    <td>{{ t.scoro}}</td>   
   </tr>
     {% endfor %}
 </table>
