--- a/cat/templates/cat/cat_show.html
+++ b/cat/templates/cat/cat_show.html
@@ -1,5 +1,5 @@
 {% extends 'generic.html' %}
-{% block breed %}Кот -- {{ cat.breed }}{% endblock %}
+{% block title %}Кот -- {{ title.article }}{% endblock %}
 {% block header %}{{ cat.breed }}{% endblock %}
   
 {% block contents %}
