--- a/cat/templates/cat/index.html
+++ b/cat/templates/cat/index.html
@@ -1,5 +1,5 @@
 {% extends 'generic.html' %}
-{% block breed %}Список котов{% endblock %}
+{% block title %}Список котов{% endblock %}
 {% block header %}Список котов{% endblock %}
   
 {% block contents %}
