--- a/cat/templates/cat/parametrs.html
+++ b/cat/templates/cat/parametrs.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block header %}Параметры для {{ cat.breed }}{% endblock %} 
+{% block header %}Параметры для {{ title.article }}{% endblock %} 
 
 {% block contents %}
 <ul>
