--- a/cat/templates/cat/cat_edit_old.html
+++ b/cat/templates/cat/cat_edit_old.html
@@ -1,8 +1,8 @@
 {% extends 'generic.html' %}
 
 
-{% block breed %}Кот -- {{ cat.breed }}{% endblock %}
-{% block header %}{{ cat.breed }}{% endblock %}
+{% block title %}Кот -- {{ cat.title }}{% endblock %}
+{% block header %}{{ cat.title }}{% endblock %}
 
 
 {% block contents %}
